--- a/LuuTruMatKhau/Views/Member/Register.cshtml
+++ b/LuuTruMatKhau/Views/Member/Register.cshtml
@@ -40,7 +40,7 @@
 
             <div class="col-lg-12 login-form">
                 <div class="col-lg-12 login-form">
-                    <form method="post" asp-action="Register" asp-controller="Member">
+                    <form method="post" asp-action="register" asp-controller="auth">
                         @Html.AntiForgeryToken()
                         <div class="form-group">
                             <label class="form-control-label">USERNAME</label>
