--- a/LuuTruMatKhau/wwwroot/css/site.css
+++ b/LuuTruMatKhau/wwwroot/css/site.css
@@ -37,15 +37,18 @@ a.btn-icon {
         color: #fff;
     }
 
-.btn-tool-inline {
-    font-size: 13px;
-    color: #fff;
+.card-body table.dataTable tbody tr{
+    background-color:unset;
+}
+.card-body .dataTables_wrapper label,
+.card-body .dataTables_info {
+    color: #fff !important;
+}
+.card-body .dataTables_wrapper .dataTables_paginate .paginate_button{
+    padding:0;
 }
 
-.tool-inline {
-    width: 100%;
-    float: left;
-    text-align: right;
-    background: #17549e;
-    padding: 5px 10px;
+
+.dark-mode .swal2-popup .swal2-content, .dark-mode .swal2-popup .swal2-title{
+    color:#000 !important;
 }
