--- a/LuuTruMatKhau/Views/Home/AccountManagement.cshtml
+++ b/LuuTruMatKhau/Views/Home/AccountManagement.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model LuuTruMatKhau.Model.Member
+@{
     ViewData["Title"] = "Account management";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,11 +10,46 @@
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="w-100 text-right">
-                    <button class="btn btn-outline-light d-inline-block"><i class="fas fa-plus-circle"></i> Account</button>
-                    <button class="btn btn-outline-light d-inline-block"><i class="fas fa-key"></i> Key</button>
-                    <button class="btn btn-outline-light d-inline-block"><i class="fas fa-lock-open"></i> Show</button>
+
+                    @if (Model.IsCreatedKeyStep2)
+                    {
+                        <button class="btn btn-outline-light d-inline-block" onclick="openMoalAddAccount()"><i class="fas fa-plus-circle"></i>&nbsp;Add Account</button>
+                    }
+                    else
+                    {
+                        <button class="btn btn-outline-light d-inline-block" onclick="Account.CreatePrivateKey()"><i class="fas fa-key"></i>&nbsp;Create Private Key</button>
+                    }
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="card card-primary card-outline" id="card-tb-account">
+    <div class="card-header">
+        <h3 class="card-title">List Account</h3>
+    </div>
+    <div class="card-body">
+        <partial name="_GetAccountViewModel" model="ViewBag.AccountMember as List<LuuTruMatKhau.Model.Account>" />
+    </div>
+</div>
+
+@section scripts{
+
+    <script src="~/js/Account.js" asp-append-version="true"></script>
+    <script>
+        function openMoalAddAccount() {
+            Common.createModalCustom(
+                "INSERT ACCOUNT",
+                '/home/_GetViewInsertMemberAccount',
+                {},
+                700,
+                "Save",
+                'Account.SaveAccount()',
+                null,
+                null
+            );
+        }
+
+        Common.appendDataTable('#tb-account');
+    </script>
+}
