--- a/LuuTruMatKhau/Views/Home/_GetGetCategoryViewModel.cshtml
+++ b/LuuTruMatKhau/Views/Home/_GetGetCategoryViewModel.cshtml
@@ -22,7 +22,7 @@
                 <td>@item.Description</td>
                 <td>@item.DateCreated</td>
                 <td class="text-center">
-                    <button class="btn btn-outline-primary"><i class="fas fa-pencil-alt"></i>&nbsp; Edit</button>
+                    <button class="btn btn-outline-primary" onclick="openModalEditCate('@item.CateID')"><i class="fas fa-pencil-alt"></i>&nbsp; Edit</button>
                     <button class="btn btn-outline-danger" onclick="Category.DelCate('@item.CateID')"><i class="fas fa-trash"></i>&nbsp;Delete</button>
 
                 </td>
